RESOLVED FIXED210399
[LFC][TFC] Introduce dedicated SlotPosition/CellSpan structs
https://bugs.webkit.org/show_bug.cgi?id=210399
Summary [LFC][TFC] Introduce dedicated SlotPosition/CellSpan structs
alan
Reported 2020-04-11 21:08:02 PDT
This is in preparation for the column span work
Attachments
Patch (14.42 KB, patch)
2020-04-11 21:40 PDT, alan
no flags
Patch (14.41 KB, patch)
2020-04-12 08:58 PDT, alan
no flags
Patch (14.32 KB, patch)
2020-04-12 09:07 PDT, alan
no flags
alan
Comment 1 2020-04-11 21:40:06 PDT
alan
Comment 2 2020-04-12 08:58:58 PDT
alan
Comment 3 2020-04-12 09:07:45 PDT
EWS
Comment 4 2020-04-12 09:35:02 PDT
Committed r259981: <https://trac.webkit.org/changeset/259981> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396222 [details].
Radar WebKit Bug Importer
Comment 5 2020-04-12 09:36:16 PDT
Fujii Hironori
Comment 6 2020-04-15 23:09:55 PDT
Filed: Bug 210592 – MSVC: LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch
Note You need to log in before you can comment on or make changes to this bug.